<resources>
    <string name="intro_slide_1_text">We reward you for every\npurchase you make</string>
    <string name="intro_slide_2_text">Tier up faster &amp; get access to\nexclusive rewards &amp; benefits</string>
    <string name="intro_slide_3_text">Play games to win points,\ncoupons &amp; much more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_available_coupons">Available</string>
    <string name="title_yours_coupons">Your Coupons</string>
    <string name="coupons">Coupons</string>
    <string name="quiz">Quiz</string>
    <string name="resume_survey_quiz">Resume %s</string>
    <string name="questions">Questions</string>
    <string name="question">Question</string>
    <string name="valid_till">Valid till:</string>
    <string name="you_will_earn">You will earn</string>
    <string name="you_will_receive">You will receive</string>
    <string name="you_can_receive">You can receive</string>
    <string name="start_survey_quiz">Start %s</string>
    <string name="survey">Survey</string>
    <string name="total_points">%s Points</string>
    <string name="resume">Resume</string>
    <string name="benefit_point_survey">win upto %s </string>
    <string name="win_coupons">win coupons</string>
    <string name="benefit_points_coupons">win upto %s points &amp; coupons</string>
    <string name="answered_question">%s/%s</string>
    <string name="quizzlet">Quizzlet</string>
    <string name="leave_surevy_quiz">Leave %s</string>
    <string name="leave_survey_quiz_info">Are you sure you want to leave this %s? We will save your progress and you can continue this later.</string>
    <string name="leave_trivia_quiz_info">Are you sure you want to leave this quiz? All progress would be lost.</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="how_to_play">How to play?</string>
    <string name="how_to_play_desc">Enter your honest answers to all the questions in the %s to win %s and coupons and special rewards.</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="select_option">Select option</string>
    <string name="select_from_dropdown">Select from dropdown</string>
    <string name="drag_to_select">Drag to select</string>
    <string name="congratulations">Congratulations!</string>
    <string name="receive_a_surprise_message">receive a surprise message</string>
    <string name="a_surprise_message">A surprise message</string>
    <string name="earned_points">%s Points</string>
    <string name="we_have_a_message">We have a message!</string>
    <string name="you_won_a_coupon">You won a coupon</string>
    <string name="you_won">You won</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="view">View</string>
    <string name="points_coupon_much_more"> , coupon &amp; much more</string>
    <string name="points_coupon"> and coupon</string>
    <string name="coupon_msg">Coupon and much more</string>
    <string name="next_question_in_5s">Next question in %ss</string>
    <string name="time_s_up">Time’s Up</string>
    <string name="looks_like_there_are_no_active_nsurveys_at_the_moment">Looks like there are no active\nsurveys at the moment</string>
    <string name="oh_no">Oh no!</string>
    <string name="looks_like_there_are_no_active_nquizzes_at_the_moment">Looks like there are no active\nquizzes at the moment</string>
    <string name="explore_more_games">Explore more Games</string>
    <string name="if_the_user_does_not_have_an_account_we_ll_send_them_an_invitation_to_register">If the user does not have an account, we’ll send them an invitation to register</string>
    <string name="we_ve_sent_your_gift">We’ve sent your gift!</string>
    <string name="send_gift">Send Gift</string>
    <string name="email_address">Email Address</string>
    <string name="gift_coupon">Gift Coupon</string>
    <string name="featured_coupons">Featured Coupons</string>
    <string name="redeem_points">Redeem Points</string>
    <string name="use_points_to_create_a_custom_ndiscount_coupon">Use Points to create a custom\nDiscount Coupon</string>
    <string name="coupons_to_explore">Coupons to Explore</string>
    <string name="select_country">Select Country</string>
    <string name="unlock_for">Unlock for</string>
    <string name="use_this_code_at_checkout">Use this code at checkout</string>
    <string name="gift_this_coupon">Gift this Coupon</string>
    <string name="download">Download</string>
    <string name="get_code">Get Code</string>
    <string name="sort_by">Sort by</string>
    <string name="expiring_soon">Expiring soon</string>
    <string name="expired">Expired</string>
    <string name="loading_please_wait">Loading, please wait...</string>
    <string name="wheel_of_fortune">Wheel of Fortune</string>
    <string name="looks_like_you_haven_t_unlocked_any_nwheel_of_fortunes_yet">Looks like you haven’t unlocked any\nwheel of fortunes yet</string>
    <string name="uh_oh">Uh-oh!</string>
    <string name="looks_like_there_are_no_active_nwheel_of_fortunes_at_the_moment">Looks like there are no active\nwheel of fortunes at the moment</string>
    <string name="network_error">Network Error!</string>
    <string name="looks_like_something_went_wrong_you_can_continue_exploring_when_you_re_back_on_the_internet">Looks like something went wrong! You can continue exploring when you’re back on the internet</string>
    <string name="retry">Retry</string>
    <string name="search">Search...</string>
    <string name="unlocked">Unlocked</string>
    <string name="used">Used</string>
    <string name="gifted">Gifted</string>
    <string name="clear">Clear</string>
    <string name="min_10_max_500_characters">Min 10 - Max 500 characters</string>
    <string name="maximum_225_characters">Maximum 225 characters</string>
    <string name="coupon_types">Coupon Types</string>
    <string name="show_what_i_can_unlock">show what I can unlock</string>
    <string name="clear_all">Clear All</string>
    <string name="come_back_later_for_more_coupons">Come back later for more coupons</string>
    <string name="oh_no_coupon">Oh no :(</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="looks_like_there_are_no_available_tasks_at_the_moment">Looks like there are no available tasks at the moment</string>
    <string name="looks_like_you_haven_t_completed_any_tasks_yet">Looks like you haven’t completed any tasks yet</string>
    <string name="add_your_bday">Add your Birthday</string>
</resources>