<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.lib.loopsdk.ui.feature_survey.presentation.quizzlet_list.QuizzletListViewModel" />
        <variable
            name="brandTheme"
            type="com.lib.loopsdk.data.remote.dto.InitializeDto.Data.BrandTheme" />
        <variable
            name="brandThemeColors"
            type="com.lib.loopsdk.core.util.Colors" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    tools:theme="@style/LibraryTheme"
    android:alpha="0"
    android:translationY="10dp"
    tools:context=".feature_survey.presentation.survey_list.SurveyAvailableFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSurveys"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:spanCount="2"
        android:layout_marginHorizontal="12dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/list_item_survey"/>
    <FrameLayout
        android:visibility="gone"
        android:id="@+id/nothingFoundContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="148dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                app:srcCompat="@drawable/ic_surveylist"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="36dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oh_no"
                    android:textColor="@color/text_black"
                    android:gravity="center"
                    android:textAlignment="center"
                    style="@style/Header300"
                    android:tag="Header300"
                    app:fontName="@{brandTheme.themeFont.style}"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/looks_like_there_are_no_active_nsurveys_at_the_moment"
                    android:textColor="@color/text_black"
                    android:gravity="center"
                    android:textAlignment="center"
                    style="@style/BodyDefault"
                    android:tag="BodyDefault"
                    app:fontName="@{brandTheme.themeFont.style}"/>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnExploreGames"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="20dp"
            app:cardElevation="0dp"
            app:shapeParam="@{brandTheme.themeShapes.buttons.style}"
            app:cardBgColor="@{brandThemeColors.SECONDARY_BRAND_COLOR}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/explore_more_games"
                    android:textColor="@color/text_black"
                    android:gravity="start"
                    android:layout_weight="1"
                    style="@style/ButtonDefault"
                    android:tag="ButtonDefault"
                    app:fontName="@{brandTheme.themeFont.style}"
                    app:textViewColor="@{brandThemeColors.PRIMARY_BRAND_COLOR}"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:paddingVertical="4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_chevron_arrow_right_forward"
                    app:tintColor="@{brandThemeColors.PRIMARY_BRAND_COLOR}"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>